deploy/openshift/kustomize/base/wanaku-router-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wanaku-router-backend
  name: wanaku-router-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wanaku-router-backend
  template:
    metadata:
      labels:
        app: wanaku-router-backend
    spec:
      containers:
        - name: wanaku-router-backend
          image: quay.io/wanaku/wanaku-router-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: router-volume
              mountPath: /home/default/.wanaku/router
          livenessProbe:
            httpGet:
              path: /api/v1/management/info/version
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /api/v1/management/info/version
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
      volumes:
        - name: router-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wanaku-router-backend
  name: wanaku-router-backend
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: wanaku-router-backend
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: wanaku-router-backend
  name: wanaku-router-backend
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: wanaku-router-backend
    weight: 100
  wildcardPolicy: None
